infra/k8s/todo-backend-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-srv
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - protocol: TCP
      port: 6000
      targetPort: 3000
