infra/k8s/todo-frontend-depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-frontend-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-frontend
  template:
    metadata:
      labels:
        app: todo-frontend
    spec:
      containers:
        - name: todo-frontend
          image: mehradi/todo-frontend
          resources:
            limits:
              memory: "128Mi"
              cpu: "500m"
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-srv
spec:
  type: NodePort
  selector:
    app: todo-frontend
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 3000
