infra/k8s/todo-frontend-srv.yml
apiVersion: v1
kind: Service
metadata:
  name: todo-frontend-srv
spec:
  type: NodePort
  selector:
    app: todo-frontend
  ports:
    - protocol: TCP
      port: 6001
      targetPort: 3000
