infra/k8s/ingress-srv.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  labels:
    name: ingress-srv
spec:
  rules:
    - host: todo.local
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: todo-front-srv
                port:
                  number: 6001
    - host: todo.local
      http:
        paths:
          - pathType: Prefix
            path: "/api"
            backend:
              service:
                name: todo-backend-srv
                port:
                  number: 6000
